<resources>
    <!-- Main app -->
    <string name="app_name">WeatherApp</string>
    <string name="temperature">Температура</string>
    <string name="clouds_info">Облачность</string>
    <string name="today_info">Информация</string>
    <string name="city">Город</string>
    <string name="greeting">Добро пожаловать!</string>
    <string name="choose_city">Выберите город:</string>
    <string name="confirm">Подтвердить</string>
    <string name="your_city">Ваш город</string>
    <string name="actv">AutoCompleteTextView</string>
    <string name="select_city">Выберите город</string>
    <string name="button_date">Дата</string>
    <string name="background">bg</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Greeting app -->
    <string-array name="cities">
        <item><string name="Moscow">Москва</string> </item>
        <item><string name="Saint-petersburg">Санкт-Петербург</string> </item>
        <item><string name="Novosibirsk">Новосибирск</string> </item>
        <item><string name="Ekaterinburg">Екатеринбург</string> </item>
        <item><string name="Kazan">Казань</string> </item>
        <item><string name="Nizhniy novgorod">Нижний Новгород</string> </item>
        <item><string name="Chelyabinsk">Челябинск</string> </item>
        <item><string name="Omsk">Омск</string> </item>
        <item><string name="Rostov">Ростов-на-Дону</string> </item>
        <item><string name="Ufa">Уфа</string> </item>
        <item><string name="Krasnoyarsk">Красноярск</string> </item>
        <item><string name="Voronezh">Воронеж</string> </item>
        <item><string name="Perm'">Пермь</string> </item>
        <item><string name="Volgograd">Волгоград</string> </item>
    </string-array>

    <!--    Fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_temp">Temp</string>
    <string name="fragment_city">City</string>
    <string name="rv_date">rv_date</string>
    <string name="rv_temp">rv_temp</string>
    <string name="weather_cloud">weather_cloud</string>

    <!-- Recycler View -->
    <string-array name="rv_days">
        <item><string name="Yesterday">Вчера</string> </item>
        <item><string name="Today">Сегодня</string> </item>
        <item><string name="Tomorrow">Завтра</string> </item>
    </string-array>

    <string-array name="rv_temp">
        <item><string name="+18">+18</string> </item>
        <item><string name="+14">+14</string> </item>
        <item><string name="+16">+16</string> </item>
    </string-array>

    <array name="pictures">
        <item>@drawable/ic_cloudy</item>
        <item>@drawable/ic_day_clear</item>
        <item>@drawable/ic_day_rain</item>
    </array>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="appearance_and_design">Вид и оформление</string>
    <string name="main_settings">Основные</string>

    <!-- Unit Preferences -->
    <string name="celcius">Цельсий</string>
    <string name="fahrenheit">Фаренгейт</string>

    <!-- Sync Preferences -->

    <string name="action_settings">Настройки</string>

    <string name="units">Единицы измерения</string>
    <string name="black_theme">Темная тема</string>
    <string name="black_mode">Полностью черный режим</string>
    <string name="dark_mode_summary_off">Если темная тема недостаточно темная</string>
    <string name="dark_mode_summary_on">Выключить абсолютно черный режим</string>
    <string name="error_connecting">Ошибка подключения к серверу</string>
    <string name="pressure">Атмосферное давление: %dмм</string>
    <string name="humidity">Влажность: %d</string>
    <string name="wind">Скорость ветра: %d м/c</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Menu -->
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Помощь</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="info">Информация</string>
    <string name="menu_developer_info">Информация о разработчике</string>
    <string name="menu_weather_now">Погода сейчас</string>
    <string name="menu_choose_city">Выбрать город</string>
    <string name="menu_settings">Настройки</string>
    <string name="server_error">Ошибка подключения к серверу!</string>
    <string name="try_again">Повторить попытку?</string>
    <string name="button_yes">Да</string>
    <string name="button_no">Нет</string>

</resources>