<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/main_settings">

        <ListPreference
            app:defaultValue="true"
            app:entries="@array/units"
            app:entryValues="@array/units"
            app:key="units"
            app:title="@string/units"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_and_design">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/black_theme" />

        <SwitchPreferenceCompat
            app:dependency="dark_mode"
            app:key="black_mode"
            app:summaryOff="@string/dark_mode_summary_off"
            app:title="@string/black_mode" />

    </PreferenceCategory>

</PreferenceScreen>