<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.WeatherApp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="5"
        android:title="@string/info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:onClick="getDateInfo"
        app:showAsAction="always" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
</menu>