<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tempView"
        android:layout_width="@dimen/tempWidth"
        android:layout_height="@dimen/tempHeight"
        android:layout_marginStart="@dimen/temp_marginStart"
        android:layout_marginTop="@dimen/temp_marginTop"
        android:maxLength="3"
        android:maxLines="1"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textSize="@dimen/temperature_now_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_textView" />

    <TextView
        android:id="@+id/city_textView"
        android:layout_width="@dimen/cityWidth"
        android:layout_height="@dimen/cityHeight"
        android:text="@string/city"
        android:textAlignment="center"
        android:textSize="@dimen/city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rain_info_marginTop"
        android:text="@string/rain_info"
        android:textSize="@dimen/rain_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tempView" />

    <TextView
        android:id="@+id/info_textView"
        android:layout_width="@dimen/infoWidth"
        android:layout_height="@dimen/infoHeight"
        android:text="@string/today_info"
        app:layout_constraintBottom_toBottomOf="@+id/main_tempView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/main_tempView"
        app:layout_constraintTop_toBottomOf="@+id/date_button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="@dimen/date_buttonWidth"
        android:layout_height="@dimen/date_buttonHeight"
        android:onClick="date_info"
        android:text="@string/button_date"
        app:layout_constraintBottom_toBottomOf="@+id/city_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/city_textView"
        app:layout_constraintTop_toTopOf="@+id/city_textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/recyclerView_marginTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>