<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Menu.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Menu.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/main_tempView"
            android:layout_width="169dp"
            android:layout_height="112dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="28dp"
            android:elegantTextHeight="false"
            android:gravity="center"
            android:maxLength="3"
            android:maxLines="1"
            android:text="@string/temperature"
            android:textAlignment="viewStart"
            android:textSize="@dimen/temperature_now_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_button" />

        <TextView
            android:id="@+id/wind_info"
            android:layout_width="@dimen/info_width"
            android:layout_height="@dimen/info_height"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="112dp"
            android:text="@string/today_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/humidity_info"
            android:layout_width="@dimen/info_width"
            android:layout_height="@dimen/info_height"
            android:layout_marginTop="4dp"
            android:text="@string/today_info"
            app:layout_constraintStart_toStartOf="@+id/wind_info"
            app:layout_constraintTop_toBottomOf="@+id/wind_info" />

        <TextView
            android:id="@+id/pressure_info"
            android:layout_width="210dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/today_info"
            app:layout_constraintStart_toStartOf="@+id/wind_info"
            app:layout_constraintTop_toBottomOf="@+id/humidity_info" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_tempView"
            app:layout_constraintVertical_bias="0.56" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="191dp"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/clouds_info"
            android:textSize="@dimen/clouds_info_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/date_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="@dimen/date_buttonWidth"
            android:layout_height="@dimen/date_buttonHeight"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:onClick="date_info"
            android:text="@string/button_date"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>